feat: render video with ffmpeg and videoshow

--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
   },
   "homepage": "https://github.com/laryssacarvalho/video-maker#readme",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
+    "@ffprobe-installer/ffprobe": "^1.0.12",
     "algorithmia": "^0.3.10",
+    "ffmpeg": "0.0.4",
     "gm": "^1.23.1",
     "googleapis": "^49.0.0",
     "image-downloader": "^3.5.0",
+    "open": "^7.0.3",
     "readline-sync": "^1.4.10",
     "sbd": "^1.0.18",
+    "videoshow": "^0.1.12",
     "watson-developer-cloud": "^4.0.1"
   }
 }
